# halo

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: verify-mux.sh
src-tauri/src/: capture.rs  cursor.rs  lib.rs  main.rs  mux.rs  recording.rs  window.rs
src/components/: CamPreview.tsx  Countdown.tsx  Dashboard.tsx  Editor.tsx  Inspector.tsx  RecBar.tsx  Recorder.tsx  Timeline.tsx
src/components/timeline/: ClipTrack.tsx  CutTrack.tsx  Playhead.tsx  Ruler.tsx  Transport.tsx  ZoomTrack.tsx  shared.ts  wheel.test.ts  wheel.ts
src/lib/: autozoom.test.ts  autozoom.ts  capture.ts  export.test.ts  export.ts  mp4demuxer.ts  renderer.ts  timeline.ts
